<resources>
    <string name="app_name">UniversEat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="featureUnavail">This feature is still under development…</string>
    <string name="user_pref">RestaurantCode.Userdata</string>
    <string-array name="drawer_option_login">
        <item>Home</item>
        <item>Search Restaurants</item>
        <item>Login</item>
        <item>Register</item>
    </string-array>
    <string-array name="drawer_option_logged_manager">
        <item>Home</item>
        <item>Search Restaurants</item>
        <item>Profile</item>
        <item>My Orders</item>
        <item>Restaurant Management</item>
        <item>Restaurant Reservations</item>
        <item>Logout</item>
    </string-array>
    <string-array name="drawer_option_logged_user">
        <item>Home</item>
        <item>Search Restaurants</item>
        <item>Profile</item>
        <item>My Orders</item>
        <item>Logout</item>
    </string-array>
    <string-array name="week">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="weekENG">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="search_helloMenu">What do you want to eat?</string>
    <string name="search_helloRestaurant">Where are you?</string>
    <string name="home_imageButtonOpt_contentDesc">This button can change the search type.</string>
    <string name="checkbox_searchByRestaurant">Search by Restaurant</string>
    <string name="checkbox_searchByDish">Search by Dish</string>
    <string name="toast_getMenusUnexpectedError">It seems like you\'re going to starve… I wasn\'t able to fetch any menu…</string>
    <string name="searchRestaurants_btnSearchText">Search Restaurants</string>
    <string name="frg_creatLog1_textViewImageText">Add a picture</string>
    <string name="restaurantView_textViewRestaurantName">Restaurant Name</string>
    <string name="restaurantView_textViewRestaurantDescription">Description</string>
    <string name="restaurantView_textViewRestaurantAddress">Address</string>
    <string name="fragment_restaurant_view_imageViewIwr_contentDesc">Image of the restaurant</string>
    <string name="menu_imageViewIwr_contentDesc">Image of the menu.</string>
    <string name="motd_imageViewIwr_contentDesc">Image of the menu of the day.</string>
    <string name="motd_textViewTitle">Menu of the day</string>
    <string name="motd_textViewDescription">Description</string>
    <string name="motd_textViewPrice">Price</string>
    <string name="reservation_textViewUsername">Customer Details</string>
    <string name="reservation_textViewLunchtime">Lunch Time</string>
    <string name="reservation_textViewOrder">Ordered Meal</string>
    <string name="reservation_textViewNotes">Reservation Notes</string>
    <string name="reservation_month">25 may</string>
    <string name="restaurantInfo_imageButtonImg">Restaurant Image</string>
    <string name="restaurantInfo_textViewName">Restaurant Name</string>
    <string name="restaurantInfo_imageViewMaps">Map view of the restaurant</string>
    <string name="restaurantInfo_textViewAddress">Restaurant Address</string>
    <string name="restaurauntInfo_textViewDescription">Brief description of the place.</string>
    <string name="restaurauntInfo_textViewTimetable">Timetable:\nMon: time\nTue: time\nWed: time\nThu: time\nFri: time\nSat: time\nSun: time</string>
    <string name="toastFail">Something went wrong or some mandatory fields are empty!</string>
    <string name="toastRestaurantLoadDataFail">We couldn\'t download data from the net :(</string>
    <string name="toastRestaurantImageLoadFail">We couldn\'t download the image from the net :(</string>
    <string name="restaurantViewEdit_textViewName">Restaurant Name</string>
    <string name="reviewlist_imageButtonImg">Restaurant Image</string>
    <string name="reviewlist_textViewName">Restaurant Name</string>
    <string name="finish">Finish</string>
    <string name="SearchResult_toastFailLoadData">We are unable to download data.. :(</string>
    <string name="SearchResult_toastNoRestaurants">There are no restaurants to show.</string>
    <string name="SearchResult_toastNoMenus">There are no menus to show.</string>
    <string name="SearchResult_filterConfirmButtonText">Filter</string>
    <string name="SearchResult_filterCancelButtonText">Cancel</string>
    <string-array name="filterCurtainMenuItems">
        <item>Beverage included</item>
        <item>No Service Fee</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Price from 1 to 10</item>
        <item>Price from 11 to 25</item>
        <item>Price greater than 25</item>
    </string-array>
    <string name="ticketCustomAlertDialog">Ticket</string>
    <string name="ratingCustomAlertDialog">At least 3 stars</string>
    <string name="openCustomAlertDialog">Open now</string>
    <string name="distanceCustomAlertDialog">Distance</string>
    <string name="defaultDistanceCustomAlertDialog">5 Km</string>
    <string name="sortTitle">Sort by</string>
    <string name="filterTitle">Filter by…</string>
    <string name="pick_gallery">Pick from Gallery</string>
    <string name="take_picture">Take a picture</string>
    <string name="alertBox_photo_title">Add Picture</string>
    <string name="intentChooser_select_image">Select Picture</string>
    <string-array name="spinner_menu">
        <item>Fixed</item>
        <item>Multiple choice</item>
    </string-array>
    <string name="workingHItem_textViewFrom">From</string>
    <string name="workingHItem_textViewTo">To</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="next">Next</string>
    <string name="frg_create_restaurant_1_textView_RestaurantName">Restaurant name</string>
    <string name="frg_create_restaurant_1_editView_RestaurantNameHint">Name of your restaurant</string>
    <string name="frg_create_restaurant_1_imageView_ContentDesc">Image of the restaurant</string>
    <string name="frg_create_restaurant_1_textView_Description">Description</string>
    <string name="frg_create_restaurant_1_editView_DescriptionHint">Brief description</string>
    <string name="frg_create_restaurant_1_textView_Telephone">Telephone number</string>
    <string name="frg_create_restaurant_1_editView_TelephoneHint">Restaurant\'s telephone number</string>
    <string name="frg_create_restaurant_1_textView_Website">Website</string>
    <string name="frg_create_restaurant_1_editView_WebsiteHint">Restaurant\'s website</string>
    <string name="frg_create_restaurant_2_textView_Address">Address</string>
    <string name="frg_create_restaurant_2_editView_AddressHint">Address of your restaurant</string>
    <string name="frg_create_restaurant_2_textView_City">City</string>
    <string name="frg_create_restaurant_2_editView_CityHint">City of your restaurant</string>
    <string name="frg_create_restaurant_2_textView_ZIPCode">ZIP Code</string>
    <string name="frg_create_restaurant_2_editView_ZIPCodeHint">ZIP Code of the restaurant\'s city</string>
    <string name="frg_create_restaurant_2_textView_State">State</string>
    <string name="frg_create_restaurant_2_editView_StateHint">Restaurant\'s state</string>
    <string name="frg_create_restaurant_3_textView_TimetableLunch">Timetable - Lunch</string>
    <string name="frg_create_restaurant_3_textView_TimetableDinner">Timetable - Dinner</string>
    <string name="titleTimePickerFrom">Select opening hour</string>
    <string name="titleTimePickerTo">Select closing hour</string>
    <string name="frg_create_restaurant_5_textView_AcceptedTickets">Accepted Tickets</string>
    <string name="checkBox_ServiceFee">Service Fee</string>
    <string name="checkBox_BeverageIncluded">Beverage included</string>
    <string name="editText_Price">Price</string>
    <string name="add_dish_starter">Starter</string>
    <string name="add_dish_main_dish">Main dish</string>
    <string name="add_dish_italian">Italian</string>
    <string name="add_dish_chinese">Chinese</string>
    <string name="add_dish_indian">Indian</string>
    <string name="create_menu_frag_fixed">Fixed</string>
    <string name="create_menu_frag_multiple_choice">Multiple choice</string>
    <string name="menu_view_edit_fixed_price_menu">Fixed Price Menu</string>
    <string name="menu_view_edit_yes">Yes</string>
    <string name="menu_view_edit_no">No</string>
    <string name="menu_view_edit_delete">Are you sure?</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="username">Name</string>
    <string name="emailaddress">Email address</string>
    <string name="surname">Surname</string>
    <string name="nickname">Username</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="button_end">END</string>
    <string name="restaurantowner">Restaurant owner</string>
    <string name="login">Create a new account</string>
    <string name="login1">Check the box if you are a Restaurant Owner</string>
    <string name="login_rest">RESTAURANT OWNER</string>
    <string name="toastRegisterPasswordFail">Entered passwords do not match!</string>
    <string name="Review_Title">Review Title</string>
    <string name="Review">Review:</string>
    <string name="Create">Create</string>
    <string name="add_dish_Name">Name</string>
    <string name="add_dish_Type">Type</string>
    <string name="add_dish_Cuisine">Cuisine</string>
    <string name="add_dish_Vegan">Vegan</string>
    <string name="add_dish_Vegetarian">Vegetarian</string>
    <string name="add_dish_Hot">Hot</string>
    <string name="add_dish_Add">Add Dish</string>
    <string name="add_dish_Gluten_free">Gluten free</string>
    <string name="Menu_name">Menu name</string>
    <string name="BuonChef" translatable="false">BuonChef</string>
    <string name="Ticket_Restaurant" translatable="false">Ticket Restaurant</string>
    <string name="BluTicket" translatable="false">BluTicket</string>
    <string name="City_Time" translatable="false">City Time</string>
    <string name="fragment_create_simple_menu1_Menu_Image">Menu Image</string>
    <string name="fragment_create_simple_menu1_Send_notification">Send notification</string>
    <string name="fragment_create_simple_menu1_Dishes">Dishes</string>
    <string name="title_review">Write a title for the review</string>
    <string name="rating_service">Service</string>
    <string name="rating_place">Place</string>
    <string name="rating_food">Food</string>
    <string name="rating_pqr">Price</string>
    <string name="write_your_review_here">Write your review here</string>
    <string name="edit_tags">Edit Tags</string>
</resources>