<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/acm_3"
    android:background="@color/material_grey_100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/propertiesLayout"
        android:padding="8dp"
        android:elevation="4dp"
        android:background="#ffffff">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nd_et_1"
            android:inputType="text"
            android:hint="@string/add_dish_Name"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nd_tw_2"
            android:text="@string/add_dish_Type"
            android:layout_below="@id/nd_et_1"
            android:textSize="15sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nd_type"
            android:layout_below="@id/nd_tw_2">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nd_tw_3"
            android:text="@string/add_dish_Cuisine"
            android:textSize="15sp"
            android:layout_below="@id/nd_type"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nd_type_2"
            android:layout_below="@id/nd_tw_3">
        </Spinner>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nd_ck_1"
            android:layout_below="@id/nd_type_2"
            android:text="@string/add_dish_Vegan"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nd_ck_2"
            android:layout_below="@id/nd_ck_1"
            android:text="@string/add_dish_Vegetarian"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nd_ck_3"
            android:layout_centerHorizontal="true"
            android:layout_alignBottom="@id/nd_ck_1"
            android:text="@string/add_dish_Hot"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nd_ck_4"
            android:layout_below="@id/nd_ck_3"
            android:layout_alignBottom="@id/nd_ck_2"
            android:layout_alignLeft="@id/nd_ck_3"
            android:text="@string/add_dish_Gluten_free"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"

        android:layout_gravity="center"
        android:id="@+id/ad_add"
        android:text="@string/add_dish_Add"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:minWidth="88dp"
        android:textSize="14sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:elevation="2dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_tags"
        android:id="@+id/editTags"
        style="@style/Button"
        android:layout_below="@+id/propertiesLayout"
        android:layout_margin="10dp" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tag_list"
        android:layout_below="@+id/editTags"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/tag_list_vert">
    </LinearLayout>
</ScrollView>

</RelativeLayout>