<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customSearchRestaurantsADB"
    android:padding="@dimen/activity_horizontal_margin"
    >

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/ticketCustomAlertDialog"
        android:id="@+id/ticketCustomADB"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ratingCustomAlertDialog"
        android:layout_below="@id/ticketCustomADB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/ratingCustomADB"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openCustomAlertDialog"
        android:layout_below="@id/ratingCustomADB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/openCustomADB"/>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distanceCustomAlertDialog"
        android:layout_below="@id/openCustomADB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/distanceCustomADB"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distanceCustomADB"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:id="@+id/linearLayout_Distance">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/distanceCustomAlertDialog"
            android:id="@+id/textView_Distance"
            />
        <android.support.v7.widget.AppCompatSeekBar
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:progress="5"
            android:max="10"
            android:id="@+id/distanceSlider"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/defaultDistanceCustomAlertDialog"
            android:gravity="end"
            android:id="@+id/textView_distanceValue"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout_Distance"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout_Buttons"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/SearchResult_filterCancelButtonText"
            android:layout_weight="0.5"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/button_Cancel"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/SearchResult_filterConfirmButtonText"
            android:layout_weight="0.5"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/button_Filter"
            />
    </LinearLayout>

</RelativeLayout>