<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fcm2"
    tools:context=".CreateMenu.Create_menu_frag"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/ll_label"
        android:background="@color/cardview_shadow_start_color">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_create_simple_menu1_Dishes"
            android:textSize="25dp"
            android:textColor="#000000"
            android:paddingLeft="5dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/fcm2_rl">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_BeverageIncluded"
            android:id="@+id/cbch_2_1"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox_ServiceFee"
            android:id="@+id/cbch_2_2"
            android:layout_below="@id/cbch_2_1"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/cbch_2_1"
            android:inputType="numberDecimal"
            android:hint="@string/editText_Price"
            android:id="@+id/fcm2_price"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:id="@+id/fin"
            android:layout_below="@id/fcm2_price"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fcm2_rl"
        android:layout_below="@id/ll_label"
        >
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/my_recycler_view"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</RelativeLayout>