<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Createlog_frag">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/create_l_0">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_login"
                android:text="@string/login"
                android:textSize="@dimen/frg_textView_textSize"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_login1"
            android:text="@string/login1"
            android:layout_below="@+id/textView_login"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="100dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_rest"
            android:id="@+id/checkBox_login"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp"
            android:layout_below="@+id/editText_login1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="33dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Button_Next_login"
            android:layout_below="@id/checkBox_login"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/next"
            android:layout_marginTop="@dimen/btn_marginTop"
            android:layout_marginRight="@dimen/btn_marginRight"
            android:layout_marginEnd="@dimen/btn_marginRight"
            />
    </RelativeLayout>
</FrameLayout>


