<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sv1"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:context=".RestaurantView.Create_review1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_review1"
            android:orientation="vertical"
            android:layout_alignParentTop="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rev_rest_name"
                android:text="@string/restaurantView_textViewRestaurantName"
                android:textAlignment="center"
                android:textSize="20sp"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rev_rate"
                android:stepSize="0.5"
                android:numStars="5"
                android:layout_gravity="center_horizontal"
                android:clickable="false" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_review2"
            android:layout_below="@id/ll_review1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:id="@+id/review_title"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:hint="@string/title_review" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/review_text"
                android:inputType="textMultiLine"
                android:ems="10"
                android:hint="@string/write_your_review_here" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/review_title"
                android:id="@+id/rating_service"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/rating_service"
                android:layout_marginTop="20dp"

                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rev_rate_service"
                android:layout_below="@id/rating_service"
                android:stepSize="0.5"
                android:numStars="5"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rev_rate_service"
                android:id="@+id/rating_place"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/rating_place"

                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rev_rate_place"
                android:layout_below="@id/rating_place"
                android:stepSize="0.5"
                android:numStars="5"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rev_rate_place"
                android:id="@+id/rating_food"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/rating_food"

                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rev_rate_food"
                android:layout_below="@id/rating_food"
                android:stepSize="0.5"
                android:numStars="5"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rev_rate_food"
                android:id="@+id/rating_pqr"
                android:textSize="20dp"
                android:textAlignment="center"
                android:text="@string/rating_pqr"

                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rev_rate_pqr"
                android:layout_below="@id/rating_pqr"
                android:stepSize="0.5"
                android:numStars="5"
                android:layout_gravity="center_horizontal" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create"
                android:layout_gravity="right"
                android:id="@+id/rev_create"
                android:layout_below="@id/review_text"

                android:background="@color/colorAccent" />

        </LinearLayout>





    </RelativeLayout>

</ScrollView>
</RelativeLayout>